# nonebot-plugin-requests

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_requests/: __init__.py  config.py  requests.py
